--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-
+# Keep environment variables out of version control
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
